--- a/qtsecretmessageextractdialog.ui
+++ b/qtsecretmessageextractdialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QtSecretMessageExtractDialog2</class>
- <widget class="QDialog" name="QtSecretMessageExtractDialog2">
+ <class>QtSecretMessageExtractDialog</class>
+ <widget class="QDialog" name="QtSecretMessageExtractDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -12,10 +12,6 @@
   </property>
   <property name="windowTitle">
    <string>Extract secret message</string>
-  </property>
-  <property name="windowIcon">
-   <iconset resource="../../Games/GameAminoAcidFighter/GameAminoAcidFighter.qrc">
-    <normaloff>:/images/R.png</normaloff>:/images/R.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog { background-color: rgb(0, 0, 0);  }
@@ -88,8 +84,6 @@ QWidget { background-color: rgb(0, 0, 0);  }</string>
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../../Games/GameAminoAcidFighter/GameAminoAcidFighter.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
